--- a/exemplo-socket-cliente/estilos.css
+++ b/exemplo-socket-cliente/estilos.css
@@ -22,19 +22,16 @@ h1 {
     width: 60%;
 }
 
-#chat input, #chat textarea {
+#chat input {
     display: block;
     margin-bottom: 5px;
 }
 
-#chat input[type=text], #chat textarea {
+#chat input[type=text] {
     width: 80%;
     border-radius: 5px;
     font-family: 'Special Elite', cursive;
     padding: 5px 10px;
-}
-
-#chat input[type=text] {
     border: 1px solid #aaa;
     height: 30px;
     font-size: 100%;
@@ -48,6 +45,16 @@ h1 {
     font-family:  "Jost", sans-serif;
     font-size: 150%;
     padding: 5px 10px;
+}
+
+#mensagensChat {
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    padding: 10px;
+    width: 80%;
+    height: 200px;
+    margin-bottom: 5px;
+    font-family: 'Special Elite', cursive;
 }
 
 #usuarios {
